Final Backend draft with all functionalities
