# models/attendance.js
@@ -1,33 +1,33 @@
-const { DataTypes } = require('sequelize');
-const sequelize = require('../config/database');
+// const { DataTypes } = require('sequelize');
+// const sequelize = require('../config/database');
 
-const Attendance = sequelize.define('mdl_attendance', {
-  id: {
-    type: DataTypes.INTEGER,
-    primaryKey: true,
-    autoIncrement: true
-  },
-  Student_ID: {
-    type: DataTypes.INTEGER
-  },
-  location: {
-    type: DataTypes.STRING,
-    allowNull: false
-  },
-  latitude: {
-    type: DataTypes.DOUBLE,
-    allowNull: false
-  },
-  longitude: {
-    type: DataTypes.DOUBLE,
-    allowNull: false
-  },
-  timestamp: {
-    type: DataTypes.BIGINT,
-    allowNull: false
-  }
-}, {
-  timestamps: false // Disable timestamps (createdAt, updatedAt)
-});
+// const Attendance = sequelize.define('mdl_attendance', {
+//   id: {
+//     type: DataTypes.INTEGER,
+//     primaryKey: true,
+//     autoIncrement: true
+//   },
+//   Student_ID: {
+//     type: DataTypes.INTEGER
+//   },
+//   location: {
+//     type: DataTypes.STRING,
+//     allowNull: false
+//   },
+//   latitude: {
+//     type: DataTypes.DOUBLE,
+//     allowNull: false
+//   },
+//   longitude: {
+//     type: DataTypes.DOUBLE,
+//     allowNull: false
+//   },
+//   timestamp: {
+//     type: DataTypes.BIGINT,
+//     allowNull: false
+//   }
+// }, {
+//   timestamps: false // Disable timestamps (createdAt, updatedAt)
+// });
 
-module.exports = Attendance;
+// module.exports = Attendance;
