# routes/mamAttendanceRoutes.js
@@ -3,12 +3,6 @@ const mamAttendanceController = require('../controllers/mamAttendanceController'
 
 const router = express.Router();
 
-// router.post('/create', mamController.createRecord);
-// router.get('/get', mamController.getAllRecords);
-// router.get('/getbyid/:id', mamController.getRecordById);
-// router.put('/updatebyid/:id', mamController.updateRecord);
-// router.delete('/deletebyid/:id', mamController.deleteRecord);
-
 router.post('/create', mamAttendanceController.createRecord);
 router.get('/get', mamAttendanceController.getAllRecords);
 router.get('/getbyid/:API_User_ID', mamAttendanceController.getRecordById);
