# swagger-output.json
@@ -11,147 +11,19 @@
     "http"
   ],
   "paths": {
-    "/api/attendance/create": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "Student_ID": {
-                  "example": "any"
-                },
-                "location": {
-                  "example": "any"
-                },
-                "latitude": {
-                  "example": "any"
-                },
-                "longitude": {
-                  "example": "any"
-                },
-                "timestamp": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/attendance/get": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/attendance/getbyid/{id}": {
+    "/image": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
+            "name": "path",
+            "in": "query",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/attendance/updatebyid/{id}": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "Student_ID": {
-                  "example": "any"
-                },
-                "location": {
-                  "example": "any"
-                },
-                "latitude": {
-                  "example": "any"
-                },
-                "longitude": {
-                  "example": "any"
-                },
-                "timestamp": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/attendance/deletebyid/{id}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -169,9 +41,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
-                },
                 "StudentName": {
                   "example": "any"
                 }
@@ -280,12 +149,6 @@
                 },
                 "StudentName": {
                   "example": "any"
-                },
-                "School_Name": {
-                  "example": "any"
-                },
-                "Class_Name": {
-                  "example": "any"
                 }
               }
             }
@@ -328,7 +191,43 @@
         }
       }
     },
-    "/api/mamAttendance/create": {
+    "/api/mamSchoolStudent/createStudentWithImage": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "School_Name": {
+                  "example": "any"
+                },
+                "Class_Name": {
+                  "example": "any"
+                },
+                "StudentName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/mam/create": {
       "post": {
         "description": "",
         "parameters": [
@@ -344,7 +243,7 @@
                 "Upload_timestamp": {
                   "example": "any"
                 },
-                "Matched_Student_ID": {
+                "Matched_User_ID": {
                   "example": "any"
                 },
                 "Image_filename": {
@@ -382,7 +281,7 @@
         }
       }
     },
-    "/api/mamAttendance/get": {
+    "/mam/get": {
       "get": {
         "description": "",
         "parameters": [
@@ -407,7 +306,7 @@
         }
       }
     },
-    "/api/mamAttendance/getbyid/{API_User_ID}": {
+    "/mam/getbyid/{API_User_ID}": {
       "get": {
         "description": "",
         "parameters": [
@@ -431,7 +330,7 @@
         }
       }
     },
-    "/api/mamAttendance/updatebyid/{API_User_ID}": {
+    "/mam/updatebyid/{API_User_ID}": {
       "put": {
         "description": "",
         "parameters": [
@@ -450,7 +349,7 @@
                 "Upload_timestamp": {
                   "example": "any"
                 },
-                "Matched_Student_ID": {
+                "Matched_User_ID": {
                   "example": "any"
                 },
                 "Image_filename": {
@@ -488,7 +387,7 @@
         }
       }
     },
-    "/api/mamAttendance/deletebyid/{API_User_ID}": {
+    "/mam/deletebyid/{API_User_ID}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -551,9 +450,41 @@
     "/api/mamschool/create": {
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "School_ID": {
+                  "example": "any"
+                },
+                "School_Name": {
+                  "example": "any"
+                },
+                "Class_ID": {
+                  "example": "any"
+                },
+                "Class_Name": {
+                  "example": "any"
+                },
+                "API_User_ID": {
+                  "example": "any"
+                },
+                "Location_ID": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -564,6 +495,18 @@
     "/api/mamschool/get": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
